Prevent horizontal scrollbar on page

--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -319,7 +319,7 @@ header
   .logo-credit
     position: relative
     top: -3px
-    left: 57px
+    padding-left: 57px
 
 .primary-actions
   padding-bottom: 5rem
